# ACodeEditor

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  TODO.md
.cargo/: config.toml
queries/: vendor.sh
queries/bash/: highlights.scm  injections.scm
queries/c/: highlights.scm  injections.scm  locals.scm
queries/cpp/: highlights.scm  injections.scm
queries/csharp/: highlights.scm  injections.scm
queries/css/: highlights.scm  injections.scm
queries/dart/: highlights.scm  injections.scm  locals.scm
queries/dockerfile/: highlights.scm  injections.scm
queries/go/: highlights.scm  injections.scm  locals.scm
queries/haskell/: highlights.scm  injections.scm  locals.scm
queries/html/: highlights.scm  injections.scm
queries/java/: highlights.scm  injections.scm
queries/javascript/: highlights.scm  injections.scm  locals.scm
queries/json/: highlights.scm  injections.scm
queries/lua/: highlights.scm  injections.scm
queries/make/: highlights.scm  injections.scm
queries/markdown/: highlights.scm  injections.scm
queries/markdown_inline/: highlights.scm  injections.scm
queries/nix/: highlights.scm  injections.scm
queries/php/: highlights.scm  injections.scm
queries/python/: highlights.scm  injections.scm  locals.scm
queries/regex/: highlights.scm
queries/ruby/: highlights.scm  injections.scm  locals.scm
queries/rust/: highlights.scm  injections.scm  locals.scm
queries/sql/: highlights.scm
queries/swift/: highlights.scm  injections.scm  locals.scm
queries/toml/: highlights.scm  injections.scm
queries/tsx/: highlights.scm  injections.scm  locals.scm
queries/typescript/: highlights.scm  injections.scm  locals.scm
queries/yaml/: highlights.scm  injections.scm
queries/zig/: highlights.scm  injections.scm
src/: app.rs  cell.rs  completion.rs  config.rs  conflict.rs  diff.rs  editor.rs  events.rs  explorer.rs  git.rs  hex.rs  main.rs  projects.rs  session.rs  session_state.rs  status.rs  syntax.rs  theme.rs  ui.rs  wrap.rs
